--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-/.env
-/.env.local
-/.env.development.local
-/.env.test.local
-/.env.production.local
-/.env.development
-/.env.test
-/.env.production
-/.env.local
-/.env.development.local
-/.env.test.local
-/.env.production.local
-
+/.env.*
 /node_modules
 /dist
 /.cursor
