Add wp_plugins volume to Docker Compose configurations
- Updated `compose.dev.yml` to include `wp_plugins` volume for managing WordPress plugins in the development environment.
- Enhanced `compose.prod.yml` with `wp_plugins_mywebsite` volume for production, ensuring consistent plugin management across environments.

--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -35,6 +35,7 @@ services:
     volumes:
       - ./:/var/www/html/wp-content/themes/mypage
       - wp_uploads:/var/www/html/wp-content/uploads
+      - wp_plugins:/var/www/html/wp-content/plugins
     networks:
       - wordpress_network
 
@@ -53,12 +54,14 @@ services:
     volumes:
       - ./:/var/www/html/wp-content/themes/mypage
       - wp_uploads:/var/www/html/wp-content/uploads
+      - wp_plugins:/var/www/html/wp-content/plugins
     networks:
       - wordpress_network
 
 volumes:
   db_data:
   wp_uploads:
+  wp_plugins:
 
 
 networks:
