--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -15,12 +15,14 @@ services:
     depends_on:
       - mysql
     restart: unless-stopped
-    # ports:
-    #   - 8080:80
+    command: >
+      bash -lc "chown -R www-data:www-data /var/www/html/wp-content/uploads &&
+      exec docker-entrypoint.sh apache2-foreground"
     env_file: .env.prod
+    environment:
+      WORDPRESS_CONFIG_EXTRA: "define('WP_HOME','https://madeapp.pl'); define('WP_SITEURL','https://madeapp.pl');"
     volumes:
       - wp_uploads_mywebsite:/var/www/html/wp-content/uploads
-      - wp_plugins_mywebsite:/var/www/html/wp-content/plugins
     networks:
       - wordpress_network
       - nginx-proxy_internal-net
@@ -28,7 +30,6 @@ services:
 volumes:
   db_mywebsite:
   wp_uploads_mywebsite:
-  wp_plugins_mywebsite:
 networks:
   wordpress_network:
     driver: bridge
