--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -14,21 +14,25 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-robert}
     volumes:
       - db_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "$$MYSQL_USER", "-p$$MYSQL_PASSWORD"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "$$MYSQL_USER", "-p$$MYSQL_PASSWORD"]
+    #   interval: 5s
+    #   timeout: 3s
+    #   retries: 10
     networks:
       - wordpress_network
 
   wordpress:
-    image: wordpress:latest
+    image: robertcieplinski/mywebsite:latest
     container_name: wordpress_app
     depends_on:
       mysql:
-        condition: service_healthy
+        condition: service_started
+        # condition: service_healthy
     restart: unless-stopped
+    command: >
+      bash -lc "chown -R www-data:www-data /var/www/html/wp-content/uploads &&
+      exec docker-entrypoint.sh apache2-foreground"
     env_file:
       - .env.dev
     ports:
@@ -44,6 +48,7 @@ services:
         define('WP_DEBUG_DISPLAY', false);
         define('WP_HOME', 'http://localhost:8080');
         define('WP_SITEURL', 'http://localhost:8080');
+        
       WORDPRESS_DEBUG: "1"
       GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD:-}
     volumes:
@@ -56,7 +61,7 @@ services:
     container_name: wpcli
     depends_on:
       mysql:
-        condition: service_healthy
+        condition: service_started
       wordpress:
         condition: service_started
     env_file:
@@ -79,3 +84,6 @@ volumes:
 networks:
   wordpress_network:
     driver: bridge
+
+# define('WP_HOME', 'http://localhost:8080');
+# define('WP_SITEURL', 'http://localhost:8080');
